# LinuxIT-TCP-IP

./: .gitignore  README.md  app.py  configs.py  conftest.py  emit.py  environments.txt  main.py  model.py  pyproject.toml  requirement.txt  server-config.yaml  tasks.py  tcpip.py  util.py  utils.py  yolo_config.yml
config/: server-config.yaml  server_config.yaml  yolo-config.yaml
docs/: 01_application_configuration_.md  02_communication_protocol_.md  03_pear_detection_model__peardetector__.md  04_command_handler_system__.md  05_client_connection_handler__peer__.md  06_tcp_server_.md  README.md
extension/: README.md
extension/CSV_TCP_SENDER/: .gitignore  README.md  config.yaml  csv_tcp_sender.py  main.py  pyproject.toml  pytest.ini  slave_id_1.csv
extension/CSV_TCP_SENDER/serial_dup_COM3/: slave_id_1.csv
extension/CSV_TCP_SENDER/test/: .gitignore  README.md  config.yaml  conftest.py  test_integration.py  test_main.py  virtual_gateway.py
extension/CSV_TCP_SENDER/test/serial_dup_COM3/: slave_id_2.csv
src/handlers/: __init__.py  base_handler.py  classification_handler.py  directory_handler.py  download_handler.py  model_handler.py
src/model/: PearDectionModel.py  __init__.py  detector.py  pear_detector.py  pear_model.py  typeconfig.py  wrapperYOLO.py
src/server/: connection_manager.py  (+2 more)
test/: README.md  configs.py  server_config.yaml  test_c.py  test_crop.py  test_handlers.py  test_inference_results.txt  test_model.py  test_model_classification.py  test_model_detection.py  test_overall_system.py  test_protocol_requests.py  test_server.py  test_tcp_client.py
(+7 files in other folders)
